Clean up Aeron integration from IntelliJ inspection